--- a/projects/mysite/templates/hiccproject/question_create.html
+++ b/projects/mysite/templates/hiccproject/question_create.html
@@ -7,14 +7,14 @@
 <body>
 <h4>질문 등록</h4>
 <hr>
-<form action = "#" method = "post">
+<form action = "" method = "post">
     제목 :
-    <input type = "text">
+    <input type = "text" name = "subject">
     <p></p>
     내용 :
-    <textarea></textarea>
+    <textarea name = "content"></textarea>
     <p></p>
-    <button>질문 저장하기</button>
+    <input type="submit" value="질문 저장하기">
 </form>
 </body>
 </html>
