--- a/projects/mysite/templates/hiccproject/question_detail.html
+++ b/projects/mysite/templates/hiccproject/question_detail.html
@@ -12,7 +12,7 @@
         <ul>
         </ul>
     </div>
-    <form action = "" method = "post">
+    <form action = "answer/create/" method = "post">
         <textarea id="answer_content" name = "answer_content" rows="15"></textarea>
         <input type="submit" value="답변 등록하기">
     </form>
