3주차 내용 업로드, 로그인과 회원가입 구현

--- a/projects/mysite/templates/hiccproject/question.html
+++ b/projects/mysite/templates/hiccproject/question.html
@@ -11,7 +11,7 @@
             border: 1px solid;
             padding : 4px;
         }
-        #register {
+        #q_register {
             margin-top : 5px;
         }
     </style>
@@ -29,7 +29,7 @@
         <tbody id="question-list">
         </tbody>
     </table>
-    <button id = "register" onclick="location.href='http://127.0.0.1:8000/home/question/create/'">질문 등록하기</button>
+    <button id = "q_register" onclick="location.href='http://127.0.0.1:8000/home/question/create/'">질문 등록하기</button>
 </div>
 </body>
 <script>
