--- a/projects/mysite/templates/hiccproject/question_detail.html
+++ b/projects/mysite/templates/hiccproject/question_detail.html
@@ -16,6 +16,7 @@
         <textarea id="answer_content" name = "answer_content" rows="15"></textarea>
         <input type="submit" value="답변 등록하기">
     </form>
+<div><a href = "http://127.0.0.1:8000/home/question/">이전</a></div>
 </body>
 <script>
     // 현재 URL에서 question_id를 추출
